[package]
name = "five-k-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
five-k = { version = "*", path = "../five-k"}

[[example]]
name = "main"
path = "main.rs"

[[example]]
name = "oneshot"
path = "oneshot.rs"